WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293184
Fix sandbox violation related to defaultContentInsetBackgroundFillEnabled function
https://bugs.webkit.org/show_bug.cgi?id=293184
Summary
Fix sandbox violation related to defaultContentInsetBackgroundFillEnabled fun...
Per Arne Vollan
Reported
2025-05-17 11:39:54 PDT
Fix sandbox violation related to defaultContentInsetBackgroundFillEnabled function.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-17 11:40:06 PDT
<
rdar://problem/151531242
>
Per Arne Vollan
Comment 2
2025-05-17 11:43:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45549
EWS
Comment 3
2025-05-20 22:01:02 PDT
Committed
295193@main
(3e8b5304b380): <
https://commits.webkit.org/295193@main
> Reviewed commits have been landed. Closing PR #45549 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug