Fix sandbox violation related to defaultContentInsetBackgroundFillEnabled function https://bugs.webkit.org/show_bug.cgi?id=293184 rdar://151531242

Reviewed by Sihui Liu and Wenson Hsieh.

We are seeing a sandbox violation when calling this function in the WebContent process. For performance and correctness reasons,
it would be good to avoid calling this in the WebContent process. This patch moves the call to the UI process and sends the
value over to the WebContent process.

* Source/WebKit/Shared/WebPageCreationParameters.h:
* Source/WebKit/Shared/WebPageCreationParameters.serialization.in:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::m_textAnimationController):

Canonical link: https://commits.webkit.org/295193@main